|#31|RA|Fixed logo alignment in Chrome and IE9

--- a/style.css
+++ b/style.css
@@ -105,7 +105,11 @@ a.child-page {
 
 
 .site-logo {
-    display: block-inline;
+    display: block;
     float: left;
     margin-right: 5px;
+}
+
+.header-main .site-title {
+ clear: none;
 }
